[project]
name = "heartbeat"
version = "0.2.0"
description = "Tiny UDP heartbeat server and client for liveness checks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
